--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap'); */
 
 *{
   margin: 0;
@@ -9,7 +9,7 @@
 html, body{
   width: 100%;
   height: 100%;
-  font-family: 'Outfit', sans-serif;
+  /* font-family: 'Outfit', sans-serif; */
 }
 .wraper{
   width: 100%;
